# Call

./: README.md  pyproject.toml
netlist_agent/: __init__.py  cli.py  github_client.py  models.py  orchestrator.py  pcb_extractors.py
tests/: test_extractors.py
